--- a/src/Penshell.Core/Penshell.Core.csproj
+++ b/src/Penshell.Core/Penshell.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="CliFx" Version="0.0.5" />
+    <PackageReference Include="Dawn.Guard" Version="1.8.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
     <PackageReference Include="Serilog" Version="2.8.0" />
   </ItemGroup>
