--- a/src/PenshellCLI/PenshellCLI.csproj
+++ b/src/PenshellCLI/PenshellCLI.csproj
@@ -22,6 +22,7 @@
   <Choose>
     <When Condition=" '$(Configuration)' == 'Debug' ">
       <ItemGroup>
+        <ProjectReference Include="..\Penshell.Commands.IO\Penshell.Commands.IO.csproj" />
         <ProjectReference Include="..\Penshell.Commands.Math\Penshell.Commands.Math.csproj" />
       </ItemGroup>
     </When>
