--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,8 @@ indent_style = space
 [*.cs]
 indent_size = 4
 insert_final_newline = true
-charset = utf-8-bom
+charset = utf-8
+end_of_line = crlf
 
 # XML project files
 [*.csproj]
