--- a/src/PenshellCLI/PenshellCLI.csproj
+++ b/src/PenshellCLI/PenshellCLI.csproj
@@ -24,6 +24,7 @@
       <ItemGroup>
         <ProjectReference Include="..\Penshell.Commands.IO\Penshell.Commands.IO.csproj" />
         <ProjectReference Include="..\Penshell.Commands.Math\Penshell.Commands.Math.csproj" />
+        <ProjectReference Include="..\Penshell.Commands.Net\Penshell.Commands.Net.csproj" />
         <ProjectReference Include="..\Penshell.Commands.Scripting\Penshell.Commands.Scripting.csproj" />
       </ItemGroup>
     </When>
