--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,8 +20,8 @@ cache:
   - '%LocalAppData%\NuGet\v3-cache' # NuGet v3
 
 before_build:
-- dotnet restore
+- dotnet restore .\src\Penshell.sln
 
 build:
-  project: src\Penshell.sln
+  project: .\src\Penshell.sln
   verbosity: minimal
