--- a/src/Penshell.Commands.Process.Tests/Penshell.Commands.Process.Tests.csproj
+++ b/src/Penshell.Commands.Process.Tests/Penshell.Commands.Process.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -15,12 +15,12 @@
 
   <ItemGroup>
     <PackageReference Include="nunit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Penshell.Commands.Math\Penshell.Commands.Math.csproj" />
+    <ProjectReference Include="..\Penshell.Commands.Process\Penshell.Commands.Process.csproj" />
   </ItemGroup>
 
 </Project>
