--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,8 +1,6 @@
 name: CI
 
 on: [push, pull_request]
-    branches:
-      - master
 
 jobs:
   build:
@@ -17,5 +15,5 @@ jobs:
       with:
         dotnet-version: 3.0.100
 
-    - name: Build & Test Debug
+    - name: Build & Test
       run: dotnet test --configuration Debug
