--- a/src/Penshell.Core/Penshell.Core.csproj
+++ b/src/Penshell.Core/Penshell.Core.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.1" />
     <PackageReference Include="Serilog" Version="2.9.0" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20104.2" />
   </ItemGroup>
 
 </Project>
