--- a/src/PenshellCLI/PenshellCLI.csproj
+++ b/src/PenshellCLI/PenshellCLI.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.2" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="System.Composition.TypedParts" Version="1.4.0" />
   </ItemGroup>
@@ -18,13 +18,17 @@
   <ItemGroup>
     <ProjectReference Include="..\Penshell.Core\Penshell.Core.csproj" />
   </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Penshell.Commands.IO\Penshell.Commands.IO.csproj" />
-    <ProjectReference Include="..\Penshell.Commands.Math\Penshell.Commands.Math.csproj" />
-    <ProjectReference Include="..\Penshell.Commands.Net\Penshell.Commands.Net.csproj" />
-    <ProjectReference Include="..\Penshell.Commands.Process\Penshell.Commands.Process.csproj" />
-    <ProjectReference Include="..\Penshell.Commands.Scripting\Penshell.Commands.Scripting.csproj" />
-  </ItemGroup>
+  
+  <Choose>
+    <When Condition=" '$(Configuration)' == 'Debug' ">
+      <ItemGroup>
+        <ProjectReference Include="..\Penshell.Commands.IO\Penshell.Commands.IO.csproj" />
+        <ProjectReference Include="..\Penshell.Commands.Math\Penshell.Commands.Math.csproj" />
+        <ProjectReference Include="..\Penshell.Commands.Net\Penshell.Commands.Net.csproj" />
+        <ProjectReference Include="..\Penshell.Commands.Process\Penshell.Commands.Process.csproj" />
+        <ProjectReference Include="..\Penshell.Commands.Scripting\Penshell.Commands.Scripting.csproj" />
+      </ItemGroup>
+    </When>
+  </Choose>
 
 </Project>
